fix: fixed gap

--- a/editor-components/about/about13/about13.module.scss
+++ b/editor-components/about/about13/about13.module.scss
@@ -13,7 +13,7 @@
         display: flex;
         align-items: stretch;
         justify-content: space-between;
-        gap: var(--composer-gap-xl);
+        gap: var(--composer-gap-md);
         width: 100%;
       }
 
@@ -138,7 +138,7 @@
       .content {
         .wrapper {
           flex-direction: column;
-          gap: var(--composer-gap-lg);
+          gap: var(--composer-gap-md);
         }
 
         .content-inner {
